<resources>
    <string name="app_name">TouchCounter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="forgot">forgot?</string>
    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Login providers by OAuth2 -->
    <string name="user_exists">User already logged in</string>
    <string name="twitter_login_text">Sign-in with Twitter</string>
    <string name="or">or</string>
    <string name="appwidget_text">Touch Rate : </string>
    <string name="add_widget">Add widget</string>
    <string name="time_format">h:mm</string>


</resources>
